--- a/portal_loja/loja/templates/cadastro.html
+++ b/portal_loja/loja/templates/cadastro.html
@@ -2,36 +2,45 @@
 
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{% static 'mystyles.css' %}">
     <title>Cadastro – Xbeast Games</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="topnav">
-        <a href="/">PRINCIPAL</a> |
-        <a href="/produtos">PRODUTOS</a> |
-        <a href="/categorias">CATEGORIAS</a> |
-        <a href="/login">LOGIN</a> |
-        <a href="/cadastro">CADASTRE-SE</a>
+      <a href="/">PRINCIPAL</a> |
+      <a href="/produtos">PRODUTOS</a> |
+      <a href="/categorias">CATEGORIAS</a> |
+      <a href="/auth/login">LOGIN</a> |
+      <a href="/auth/cadastro">CADASTRE-SE</a>
     </div>
+
     <div class="mycard">
-        <h1>Cadastro</h1>
-        <form method="post">
-            {% csrf_token %}
-            <label for="username">Usuário:</label><br>
-            <input type="text" id="username" name="username" required><br><br>
-            <label for="email">E-mail:</label><br>
-            <input type="email" id="email" name="email" required><br><br>
-            <label for="password1">Senha:</label><br>
-            <input type="password" id="password1" name="password1" required><br><br>
-            <label for="password2">Confirme a senha:</label><br>
-            <input type="password" id="password2" name="password2" required><br><br>
-            <button type="submit">Registrar</button>
-        </form>
-        {% if error %}
-            <p class="error">{{ error }}</p>
-        {% endif %}
+      <h1>Cadastro</h1>
+      <form method="post" action="{% url 'cadastro' %}">
+        {% csrf_token %}
+
+        <label for="user">Username:</label><br>
+        <input type="text" id="user" name="user" required><br><br>
+
+        <label for="email">E-mail:</label><br>
+        <input type="email" id="email" name="email" required><br><br>
+
+        <label for="senha">Senha:</label><br>
+        <input type="password" id="senha" name="senha" required><br><br>
+
+        <label for="telefone">Telefone:</label><br>
+        <input type="text" id="telefone" name="telefone"><br><br>
+
+        <label for="endereco">Endereço:</label><br>
+        <input type="text" id="endereco" name="endereco"><br><br>
+
+        <label for="cpf">CPF:</label><br>
+        <input type="text" id="cpf" name="cpf" required><br><br>
+
+        <button type="submit">Cadastrar</button>
+      </form>
     </div>
-</body>
+  </body>
 </html>
