--- a/portal_loja/loja/templates/categorias.html
+++ b/portal_loja/loja/templates/categorias.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -8,13 +7,8 @@
     <title>Categorias – Xbeast Games</title>
   </head>
   <body>
-    <div class="topnav">
-      <a href="/">PRINCIPAL</a> |
-      <a href="/produtos">PRODUTOS</a> |
-      <a href="/categorias">CATEGORIAS</a> |
-      <a href="/auth/login">LOGIN</a> |
-      <a href="/auth/cadastro">CADASTRE-SE</a>
-    </div>
+    
+    {% include 'includes/header.html' %}
 
     <div class="mycard">
       <h1>Categorias</h1>
