--- a/portal_loja/loja/templates/produtos.html
+++ b/portal_loja/loja/templates/produtos.html
@@ -1,37 +1,35 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="{% static 'mystyles.css' %}">
-    <title>Produtos – Xbeast Games</title>
-  </head>
-  <body>
-    <div class="topnav">
-      <a href="/">PRINCIPAL</a> |
-      <a href="/produtos">PRODUTOS</a> |
-      <a href="/categorias">CATEGORIAS</a> |
-      <a href="/auth/login">LOGIN</a> |
-      <a href="/auth/cadastro">CADASTRE-SE</a>
-    </div>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <title>Produtos – Xbeast Games</title>
+  <link rel="stylesheet" href="{% static 'mystyles.css' %}" />
+</head>
+<body>
+  {% include 'includes/header.html' %}
 
-    <div class="mycard">
-      <h1>Produtos</h1>
-      <ul>
-        {% for produto in produtos %}
-          <li>
-            <a href="{% url 'produto_detalhe' produto.id_produto %}">
-              <strong>{{ produto.nome }}</strong><br>
-              Preço: R$ {{ produto.preco }}<br>
-              Marca: {{ produto.marca|default:"Não informada" }}<br>
-              Categoria: {{ produto.categoria.nome }}<br>
-            </a>
-          </li>
-        {% empty %}
-          <li>Nenhum produto cadastrado.</li>
-        {% endfor %}
-      </ul>
-    </div>
-  </body>
+  <section class="mycard">
+    <h1>Produtos</h1>
+
+    {% if produtos %}
+    <ul class="produtos-lista">
+      {% for produto in produtos %}
+      <li>
+        <a href="{% url 'produto_detalhe' produto.id_produto %}">
+          <strong>{{ produto.nome }}</strong>
+          <p>Preço: R$ {{ produto.preco }}</p>
+          <p>Marca: {{ produto.marca|default:"Não informada" }}</p>
+          <p>Categoria: {{ produto.categoria.nome }}</p>
+        </a>
+      </li>
+      {% endfor %}
+    </ul>
+    {% else %}
+    <p class="nenhum-produto">Nenhum produto cadastrado.</p>
+    {% endif %}
+  </section>
+
+</body>
 </html>
