--- a/portal_loja/loja/templates/categoria_detalhe.html
+++ b/portal_loja/loja/templates/categoria_detalhe.html
@@ -10,7 +10,7 @@
     
     {% include 'includes/header.html' %}
 
-    <div class="mycard">
+    <div class="mycard categoria-detalhe">
       <h1>Categoria: {{ categoria.nome }}</h1>
       <p>{{ categoria.descricao|default:"Sem descrição." }}</p>
       <h2>Produtos nessa categoria:</h2>
