--- a/portal_loja/loja/templates/categorias.html
+++ b/portal_loja/loja/templates/categorias.html
@@ -10,7 +10,7 @@
     
     {% include 'includes/header.html' %}
 
-    <div class="mycard">
+    <div class="mycard categorias-container">
       <h1>Categorias</h1>
       <ul>
         {% for cat in categorias %}
