--- a/portal_loja/loja/templates/cadastro.html
+++ b/portal_loja/loja/templates/cadastro.html
@@ -10,7 +10,7 @@
     
     {% include 'includes/header.html' %}
     
-    <div class="mycard">
+    <div class="mycard aut">
       <h1>Cadastro</h1>
       <form method="post" action="{% url 'cadastro' %}">
         {% csrf_token %}
