--- a/portal_loja/loja/templates/principal.html
+++ b/portal_loja/loja/templates/principal.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     {% include 'includes/header.html' %}
+    {% include "includes/banner.html" %}
 
     <div class="main">
         <h1>Xbeast Games</h1>
@@ -20,7 +21,12 @@
         <div class="grid-produtos">
             {% for produto in produtos_destaque %}
             <div class="card-produto">
-                <h3><a href="{% url 'produto_detalhe' produto.id_produto %}">{{ produto.nome }}</a></h3>
+                {% if produto.imagem %}
+                    <img src="{{ produto.imagem.url }}" alt="{{ produto.nome }}" class="produto-img">
+                {% else %}
+                    <img src="{% static 'img/sem-imagem.png' %}" alt="Sem imagem disponível" class="produto-img">
+                {% endif %}
+                <h3><a href="{% url 'produto_detalhe' produto.id_produto %}">{{ produto.nome|truncatechars:55 }}</a></h3>
                 <p><strong>Preço:</strong> R$ {{ produto.preco }}</p>
                 <p><strong>Categoria:</strong> {{ produto.categoria.nome }}</p>
                 <p><strong>Estoque:</strong> {{ produto.estoque }} un.</p>
